# greenfield

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  vcpkg.json
apps/renderer_startup_probe/: main.cpp
apps/sandbox/: main.cpp
assets/fonts/: README.md
cmake/: CheckCppCmakeAppTemplate.cmake  CheckDependencyBoundaries.cmake  CheckSourceTreeFast2DConsumer.cmake  Warnings.cmake  vcpkg-toolchain.cmake
consumers/source-tree-fast2d/: CMakeLists.txt
consumers/source-tree-fast2d/src/: main.cpp
docs/: architecture.md  coding-standards.md  consumer-contract.md  phase2-restricted-graphics-launcher.md  roadmap.md  software-factory-e2-bootstrap.md  software-factory-extraction.md  software-factory-provenance-plan.md
engine/core/: Color.h  Rect.h  Surface.h  Vec2.h
engine/input/: InputRouting.h  InputState.h
engine/platform/: INativeSurfaceProvider.h  IWindow.h  SdlRasterPresenter.cpp  SdlRasterPresenter.h  SdlStartupPresenter.cpp  SdlStartupPresenter.h  SdlWindow.cpp  SdlWindow.h
engine/render/: IRenderer.h  RenderCommand.h  RenderCommandList.h  RendererBackendKind.h
engine/render/fast2d/: Fast2DRenderer.cpp  Fast2DRenderer.h
engine/render/webgpu/: WebGpuContext.cpp  WebGpuContext.h  WebGpuRenderer.cpp  WebGpuRenderer.h  WebGpuVisualizationSupport.cpp  WebGpuVisualizationSupport.h
engine/ui/: Layout.h  Style.h  UiContext.cpp  UiContext.h  UiId.h  UiSurface.h
engine/visualization/: Viewport2D.cpp  Viewport2D.h  VisualizationCommand.h  VisualizationCommandList.cpp  VisualizationCommandList.h
templates/cpp-cmake-app/: CMakeLists.txt  README.md
templates/cpp-cmake-app/src/: main.cpp
tests/: TestHelpers.h  core_smoke.cpp  core_tests.cpp  fast2d_renderer_tests.cpp  layout_tests.cpp  render_command_tests.cpp  renderer_backend_kind_tests.cpp  sdl_raster_presenter_tests.cpp  ui_tests.cpp  viewport2d_tests.cpp  visualization_command_tests.cpp  webgpu_visualization_support_tests.cpp
tools/extraction/: audit-filtered-history.sh  bootstrap-generated-paths.txt  extract-software-factory.sh  prepare-software-factory-bootstrap.sh  retained-paths.txt  run-tests
tools/extraction/tests/: test_bootstrap.py  test_extraction.py
tools/graphics_broker/: README.md  run-tests
tools/graphics_broker/greenfield_graphics_broker/: __init__.py  credentials.py  errors.py  framing.py  ledger.py  protocol.py
tools/graphics_broker/tests/: test_ledger.py  test_protocol.py
tools/runner/: README.md  greenfield-agent  install.sh  run-tests
tools/runner/greenfield_agent/: __init__.py  __main__.py  cli.py  models.py  paths.py  process.py  runner.py
tools/runner/systemd/: greenfield-task@.service.in
tools/runner/tests/: test_cli.py  test_install.py  test_models.py  test_process.py  test_runner.py
